add post/get-post from group